# claude-tool-choice-modes

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  VERIFICATION.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: close.md  handoff.md  sdd.md  verify.md
.claude/hooks/: SessionStart-context-prime.sh  Stop-task-close-emit.sh
.claude/rules/: architecture.md  commit.md  sdd.md  testing.md
.claude/skills/add-adapter/: SKILL.md  _adapter_template.py
.claude/skills/eval-runner/: SKILL.md  _reference_run_eval.py
.claude/skills/ship-release/: SKILL.md
.claude/skills/write-handoff/: SKILL.md
.github/workflows/: ci.yml  smoke.yml
examples/: 01_single_adapter.py  02_fallback_demo.py  03_custom_stack.py  README.md
scripts/: check_version_parity.py  smoke.sh
src/claude_tool_choice_modes/: __init__.py  __main__.py  main.py  showcase.py  tools.py
src/claude_tool_choice_modes/application/: __init__.py  fallback.py  ports.py
src/claude_tool_choice_modes/domain/: __init__.py  errors.py  llm.py
src/claude_tool_choice_modes/infrastructure/: __init__.py  anthropic_adapter.py  ollama_adapter.py  openai_adapter.py  settings.py
tasks/: C_T004_tool_choice_modes_prompt.md  pr_body.md
tests/: conftest.py
tests/contract/: conftest.py  fakes.py  test_llm_port.py
tests/unit/: test_cli.py  test_main.py  test_showcase.py
tests/unit/application/: test_fallback.py  test_ports.py
tests/unit/cassettes/test_showcase/: test_choice_any_forces_tool_use.yaml  test_choice_auto_round_trip.yaml  test_choice_specific_tool_forces_named.yaml
tests/unit/domain/: test_llm.py
tests/unit/infrastructure/: test_anthropic_adapter.py  test_ollama_adapter.py  test_openai_adapter.py  test_settings.py
